IVYPORTAL-10419: Various or urgent requests in IVYPORTAL S192 - Fixed position of Express icon on IE

--- a/AxonIvyPortal/PortalKit/webContent/resources/css/module.css
+++ b/AxonIvyPortal/PortalKit/webContent/resources/css/module.css
@@ -1249,9 +1249,8 @@ body .process-widget .ui-fieldset .ui-fieldset-legend {
 }
 
 _:-ms-input-placeholder, :root .express-process-logo {
-  height: auto;
-  width: auto;
   margin-right: 5px;
+  margin-bottom: 1px;
 }
 
 _:-ms-input-placeholder, :root .express-process-logo .ui-panel-content {
